# Example_QtMyThread

./: .gitignore  CMakeLists.txt  MyObject.cpp  MyObject.h  README.md  Soft.cpp  Soft.h  main.cpp
